Added an argument to the /nextmap command

--- a/Nexus/plugin.yml
+++ b/Nexus/plugin.yml
@@ -1,7 +1,8 @@
 main: com.juubes.nexus.Nexus
 name: Nexus
-version: 2.0
+version: 1.0.1
 author: Juubes
+website: https://github.com/Juubes/Nexus/
 description: A 1v1 team PvP framework.
 commands:
   join: null
