--- a/Nexus/.project
+++ b/Nexus/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Nexus</name>
+	<name>Nexus 1.0.1</name>
 	<comment></comment>
 	<projects>
 	</projects>
