--- a/Nexus/pom.xml
+++ b/Nexus/pom.xml
@@ -19,9 +19,17 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 	<dependencies>
-
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.12-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
