--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.juubes</groupId>
 	<artifactId>nexus</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.2</version>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -24,14 +24,13 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.12-R0.1-SNAPSHOT</version>
-			<scope>provided</scope>
+			<version>1.8.8-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		
+
 	</dependencies>
 </project>
