--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 bin/
 target/
 .project
-.settings/org.eclipse.m2e.core.prefs
+.classpath
+.settings/*
+#.settings/org.eclipse.m2e.core.prefs
+#.settings/org.eclipse.jdt.core.prefs
