--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,42 @@
 	<version>3.0.0</version>
 
 	<build>
+		<defaultGoal>clean package install</defaultGoal>
 		<sourceDirectory>src</sourceDirectory>
-		<defaultGoal>package install</defaultGoal>
+
+		<testSourceDirectory>src/com/juubes/nexus/test</testSourceDirectory>
 
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.4</version>
+
+				<configuration>
+					<artifactSet>
+						<includes>
+							<include></include>
+						</includes>
+					</artifactSet>
 				</configuration>
 			</plugin>
 		</plugins>
+
 
 		<resources>
 			<resource>
